# RAS

./: .gitignore  CMakeLists.txt  README.md
docs/: schema.md
examples/: 01_resistor_crcw0603.json  02_shunt_resistor_wsk2512.json  03_varistor_b72214.json  04_thermistor_sl22.json
schemas/: RAS.json  inputs.json  outputs.json  resistor.json  thermistor.json  utils.json  varistor.json
schemas/inputs/: designRequirements.json
src/: RasConverter.cpp  RasConverter.hpp  bindings.cpp  libRAS.cpp
tests/: test_ras.cpp  test_schemas.py
